--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,16 +40,20 @@
                     android:id="@+id/btnsave"
                     android:layout_width="50dp"
                     android:layout_height="wrap_content"
+
+                    android:onClick="onClick"
                     android:text="저장" />
 
                 <Button
                     android:id="@+id/btncancel"
                     android:layout_width="50dp"
                     android:layout_height="wrap_content"
+                    android:onClick="onClick"
                     android:text="취소" />
             </LinearLayout>
 
             <DatePicker
+                android:id="@+id/dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="-20dp"
@@ -58,6 +62,7 @@
                 android:scaleY="0.8" />
 
             <EditText
+                android:id="@+id/et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -66,45 +71,45 @@
                 android:hint="이 부분에 메모를 입력하세요" />
         </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/linear1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="10dp">
+
         <LinearLayout
-            android:id="@+id/linear1"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:padding="10dp">
+            android:layout_height="wrap_content"
+            android:background="#ff0"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="5dp">
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <ImageView
+                android:layout_width="27dp"
+                android:layout_height="35dp"
+                android:src="@drawable/orange" />
+
+            <TextView
+                android:id="@+id/tvCount"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="#ff0"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:padding="5dp">
+                android:layout_weight="1"
+                android:text="등록된 메모 개수: " />
 
-                <ImageView
-                    android:layout_width="27dp"
-                    android:layout_height="35dp"
-                    android:src="@drawable/orange" />
-
-                <TextView
-                    android:id="@+id/tvCount"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="등록된 메모 개수: 3" />
-
-                <Button
-                    android:id="@+id/btn1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:onClick="onClick"
-                    android:text="일기등록" />
-            </LinearLayout>
-
-            <ListView
-                android:id="@+id/listview"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
+            <Button
+                android:id="@+id/btn1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="onClick"
+                android:text="일기등록" />
         </LinearLayout>
-    </FrameLayout>
+
+        <ListView
+            android:id="@+id/listview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </LinearLayout>
+</FrameLayout>
